--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "vee-validate": "^4.13.2",
+    "vite-plugin-vuetify": "^2.1.3",
     "vue": "^3.5.12",
+    "vuetify": "^3.11.8",
     "zod": "^3.23.8"
   },
   "devDependencies": {
