--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@selemondev/vue3-marquee": "^0.0.8",
     "@vee-validate/zod": "^4.13.2",
     "@vueuse/core": "^11.1.0",
+    "animate.css": "^4.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel": "^8.3.0",
