--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vee-validate": "^4.13.2",
     "vite-plugin-vuetify": "^2.1.3",
     "vue": "^3.5.12",
+    "vue-easy-lightbox": "^1.19.0",
     "vuetify": "^3.11.8",
     "zod": "^3.23.8"
   },
